- made TS5 undef'd by default for this RC

--- a/include/config.h.dist
+++ b/include/config.h.dist
@@ -16,7 +16,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- * $Id: config.h.dist,v 1.111 2001/08/10 08:02:28 leeh Exp $
+ * $Id: config.h.dist,v 1.112 2001/08/11 22:44:46 lusky Exp $
  */
 #ifndef INCLUDED_config_h
 #define INCLUDED_config_h
@@ -304,11 +304,6 @@
  * However, the client will still see the real reason upon connect attempts.
  */
 #define KLINE_WITH_CONNECTION_CLOSED
-
-/* NON_REDUNDANT_KLINES - If you want the server to flag and not apply
- * redundant klines
- */
-#define NON_REDUNDANT_KLINES
 
 /* BOTCHECK - rudimentary bot checking
  */
@@ -702,29 +697,27 @@
  */
 #define LITTLE_I_LINES
 
-/* TS5
- * This will mean the oldest version of a channel will always remain after a
- * split, whereas TS3 behaviour was to allow any TS in an opless channel.
- *
- * This effectively will make splitting servers for ops useless, but
- * could
- * cause desync on a mixed TS3/TS5 network.
- *
- * See doc/ts5.txt for more details
- */
-#define TS5
-
-/* TS5_ONLY
- * This will disallow TS3 servers from linking
- * (see README.HYBRID6.1-CHANGES for more details)
- */
-#undef  TS5_ONLY
-
 /* ----------------- not approved on EFnet section --------------------
  *
  * if you are an efnet admin, some of these are not officially supported, so
  * you may want to undef some -- fl_
  */
+
+/* TS5
+ * This will mean the oldest version of a channel will always remain after a
+ * split, whereas TS3 behaviour was to allow any TS in an opless channel.
+ *
+ * This effectively will make splitting servers for ops useless, but could
+ * cause desync on a mixed TS3/TS5 network.
+ *
+ * See doc/ts5.txt for more details
+ */
+#undef  TS5 
+
+/* TS5_ONLY
+ * This will disallow TS3 servers from linking
+ */
+#undef  TS5_ONLY
 
 /* GLINES - global Kline-like bans
  * Define this if you want GLINE support
