- Fix for messages_cust.tab dependencies (wc) - Fix for oper modes from conf (wc) - made IGNORE_BOGUS_TS undef by default for now

--- a/include/config.h.dist
+++ b/include/config.h.dist
@@ -16,7 +16,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- * $Id: config.h.dist,v 1.112 2001/08/11 22:44:46 lusky Exp $
+ * $Id: config.h.dist,v 1.113 2001/08/30 01:54:45 lusky Exp $
  */
 #ifndef INCLUDED_config_h
 #define INCLUDED_config_h
@@ -719,6 +719,12 @@
  */
 #undef  TS5_ONLY
 
+/* Ignore bogus timestamps from other servers. Yes this will desync
+ * the network, but it will allow chanops to resync with a valid non TS 0
+ */
+#undef  IGNORE_BOGUS_TS
+
+
 /* GLINES - global Kline-like bans
  * Define this if you want GLINE support
  * when this is defined, 3 completely different opers from
@@ -739,11 +745,6 @@
  * so its #undef'd by default.
  */
 #undef  NO_FAKE_GLINES
-
-/* Ignore bogus timestamps from other servers. Yes this will desync
- * the network, but it will allow chanops to resync with a valid non TS 0
- */
-#define IGNORE_BOGUS_TS
 
 /* CHANMODE_E
  * /mode #channel +e allows you to add exceptions to bans.
