--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -1,7 +1,7 @@
 #
 # Makefile.in for ircd/src
 #
-# $Id: Makefile.in,v 1.65 2001/07/18 02:30:33 lusky Exp $
+# $Id: Makefile.in,v 1.66 2001/08/30 01:54:46 lusky Exp $
 CC = @CC@
 RM = @RM@
 MKDEP = ${CC} -MM
@@ -211,6 +211,8 @@ clean:
 
 distclean: clean
 	${RM} -f Makefile version.c.last
+
+numeric.o:	messages_cust.tab
 
 include .depend
 
