Corrected two pieces of information in example.conf

--- a/doc/example.conf
+++ b/doc/example.conf
@@ -1,4 +1,4 @@
-#   $Id: example.conf,v 1.31 2001/07/10 12:40:24 jdc Exp $
+#   $Id: example.conf,v 1.32 2001/10/25 03:17:34 wcampbel Exp $
 #   IRC - Internet Relay Chat, doc/example.conf
 #   Copyright (C) 1992, Bill Wisner
 #
@@ -11,7 +11,8 @@
 #   Updated again July 17, 1998 -db
 #   Updated 990102 to take out P: line connection limiting code
 #   Updated again July 5, 1999 -db
-#   Updated for 6.1 Release, 6 June 2001 - wcampbel
+#   Updated for 6.2 Release, 6 June 2001 - wcampbel
+#   Updated the last time, 24 Oct 2001
 #
 #   This program is free software; you can redistribute it and/or modify
 #   it under the terms of the GNU General Public License as published by
@@ -44,7 +45,8 @@
 # address of the interface closest to the destination.
 #
 # NOTE:  As of hybrid-6, the port field no longer binds a port by default.
-# It is an inoperative and obsolete field.
+#        however it defines what port is used by default to connect to
+#        remote servers
 #
 M:hayes.ims.alaska.edu:192.168.1.250:University of Alaska Fairbanks:
 # 
@@ -52,7 +54,7 @@ M:hayes.ims.alaska.edu:192.168.1.250:University of Alaska Fairbanks:
 #    may contain any arbitrary text. It is printed by the /ADMIN command.
 #
 A:University of Alaska Institute of Marine Science:Fairbanks, AK USA:Bill Wisner <wisner@ims.alaska.edu>
-
+#
 #
 # .include lines, insert a file from DPATH directory into the conf
 # you could use this to insert a common file between several
@@ -83,11 +85,6 @@ A:University of Alaska Institute of Marine Science:Fairbanks, AK USA:Bill Wisner
 #
 # Class numbers must be positive to ensure future modification of ircd to
 # use -1 internally could not be complicated with it's use externally.
-#
-# Contrary to popular belief, having a port in a C: line does not enable
-# autoconnects, the connection frequency field in the Y: line used by the
-# C: line does.  Be sure and properly set the connection frequency
-# properly for all leaf only server connections
 #
 Y:1:90:0:20:100000
 Y:2:90:300:10:4000000
