- revved patchlevel to 6.2.1rc2 - another spoofing fix

--- a/include/config.h.dist
+++ b/include/config.h.dist
@@ -16,7 +16,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- * $Id: config.h.dist,v 1.119 2001/10/25 16:28:14 leeh Exp $
+ * $Id: config.h.dist,v 1.120 2001/11/28 05:28:42 lusky Exp $
  */
 #ifndef INCLUDED_config_h
 #define INCLUDED_config_h
@@ -709,7 +709,7 @@
  * clients with a little i instead of an I in their I line
  * can be chanopped, but cannot chanop anyone else.
  */
-#undef	LITTLE_I_LINES
+#undef LITTLE_I_LINES
 
 /* GLINES - global Kline-like bans
  * Define this if you want GLINE support
