Revise docs for the latest flurry of commits.  I still need more testing on a couple things, but it's pretty close

--- a/doc/example.conf
+++ b/doc/example.conf
@@ -1,4 +1,4 @@
-#   $Id: example.conf,v 1.32 2001/10/25 03:17:34 wcampbel Exp $
+#   $Id: example.conf,v 1.33 2001/11/29 07:22:03 wcampbel Exp $
 #   IRC - Internet Relay Chat, doc/example.conf
 #   Copyright (C) 1992, Bill Wisner
 #
@@ -112,14 +112,22 @@ I:root@acad.alask.edu::root@acad.alaska.edu::1
 ##I:root@128.250.*::root@*.mu.oz.au::1
 
 ## This is a correct example in hybrid-6, the username 
-## is not used for an IP I line (this may be changed, its a simple change
+## is now used for an IP I line.  Specify it in the name field.
 ## but EFnet is currently deprecating the use of non resolving client hosts)
 ## If the IP block has a resolving host name, it will be shown instead
 ## of the IP address. This just serves to allow on an entire block of ip's
 ## without needing to specify each individual hostname.
-## Note, you must use an 'x' in the name field
+## Note, The old requirment was an 'x' in the name field.  Using 'x' now
+## will be converted to '*', allowing any username.
 
+## Allow any username from that IP block
 I:128.250.0.0/16::x::1
+
+## This does the same thing
+I:128.250.0.0/16::*::1
+
+## Allow only user db from that IP block
+I:128.250.0.0/16::db::1
 
 #
 # You can also limit the number of connections from one host
@@ -203,7 +211,7 @@ I:NOMATCH::*@*ts*::3
 ##    with an 'x'
 ##    i.e. 
 ##    I:192.168.0.0/24::x::3 #this is an IP I line
-##    I:192.168.0.0::db@*somesite.com::3 #this is a spoofed IP	
+##    I:192.168.0.0::=db@*somesite.com::3 #this is a spoofed IP	
 #
 # O: authorize operators. Fields are, in order, host name the operator must
 #    be logged in from (wildcards allowed), operator's password, operator's
