--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -1,7 +1,7 @@
 #
 # Makefile.in for ircd/src
 #
-# $Id: Makefile.in,v 1.66 2001/08/30 01:54:46 lusky Exp $
+# $Id: Makefile.in,v 1.67 2001/12/04 04:47:44 androsyn Exp $
 CC = @CC@
 RM = @RM@
 MKDEP = ${CC} -MM
@@ -16,6 +16,7 @@ CPPFLAGS = ${INCLUDES} @CPPFLAGS@
 #
 
 SRCS = \
+	adns.o \
 	blalloc.c \
 	channel.c \
 	class.c \
@@ -80,7 +81,6 @@ SRCS = \
 	numeric.c \
 	packet.c \
 	parse.c \
-	res.c \
 	restart.c \
 	s_auth.c \
 	s_bsd.c \
@@ -103,6 +103,7 @@ SRCS = \
 # Ultrix can't use gnu make????? feh --Bleep
 # 
 #OBJS = \
+#	adns.o \
 #	blalloc.o \
 #	channel.o \
 #	class.o \
