--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -1,7 +1,7 @@
 #
 # Makefile.in for ircd/src
 #
-# $Id: Makefile.in,v 1.67 2001/12/04 04:47:44 androsyn Exp $
+# $Id: Makefile.in,v 1.68 2001/12/04 04:59:36 androsyn Exp $
 CC = @CC@
 RM = @RM@
 MKDEP = ${CC} -MM
@@ -16,7 +16,7 @@ CPPFLAGS = ${INCLUDES} @CPPFLAGS@
 #
 
 SRCS = \
-	adns.o \
+	adns.c \
 	blalloc.c \
 	channel.c \
 	class.c \
