--- a/adns/Makefile.in
+++ b/adns/Makefile.in
@@ -1,7 +1,7 @@
 #
 # Makefile.in for ircd/adns
 #
-# $Id: Makefile.in,v 1.1 2001/12/04 04:46:41 androsyn Exp $
+# $Id: Makefile.in,v 1.2 2001/12/04 05:01:49 androsyn Exp $
 CC = @CC@
 RM = @RM@
 MKDEP = ${CC} -MM
@@ -73,5 +73,7 @@ clean:
 distclean: clean
 	${RM} -f Makefile 
 
+depend:
+	${MKDEP} ${CPPFLAGS} ${SRCS} > .depend
 
 
