- Removal of zlib/ directory.  Now uses stock system zlib. - Appropriately "auto-search" for zlib (deflate() functions in -lz)   during configure.

--- a/Makefile.in
+++ b/Makefile.in
@@ -16,7 +16,7 @@
 #*   along with this program; if not, write to the Free Software
 #*   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 #*
-#*   $Id: Makefile.in,v 1.21 2001/12/04 04:47:40 androsyn Exp $
+#*   $Id: Makefile.in,v 1.22 2001/12/07 04:13:18 jdc Exp $
 #*/
 
 RM=@RM@
@@ -79,8 +79,7 @@ CFLAGS = -g -O2 -DNDEBUG
 
 
 SHELL=/bin/sh
-SUBDIRS=adns zlib src tools
-# ZSUBDIRS=zlib $(SUBDIRS)
+SUBDIRS=adns src tools
 
 MAKE = make ${MFLAGS} 'CFLAGS=${CFLAGS}' 'INSTALL=${INSTALL}' 'LDFLAGS=${LDFLAGS}'
 # ZMAKE = make 'CFLAGS=${CFLAGS}' 'INSTALL=${INSTALL}' 'LDFLAGS=${LDFLAGS}'
@@ -93,8 +92,6 @@ build:
 		echo "Doing so now."; \
 		sh configure; \
 	fi
-#	cd zlib; \
-#	${ZMAKE} build; cd ..
 	@for i in $(SUBDIRS); do \
 		echo "Building $$i";\
 		cd $$i;\
