--- a/tools/Makefile.in
+++ b/tools/Makefile.in
@@ -1,10 +1,10 @@
-# $Id: Makefile.in,v 1.16 2001/07/10 12:40:38 jdc Exp $
+# $Id: Makefile.in,v 1.17 2001/12/07 04:13:32 jdc Exp $
 
 CC=@CC@
 RM=@RM@
 
 IRCDLIBS     = @LIBS@
-INCLUDEDIR   = -I../include -I../zlib
+INCLUDEDIR   = -I../include
 
 mkpasswd_SOURCES = mkpasswd.c
 mkpasswd_OBJECTS = mkpasswd.o
@@ -49,7 +49,5 @@ lint:
 
 # DO NOT DELETE
 
-mkpasswd.o: ../include/setup.h ../zlib/zlib.h
-mkpasswd.o: ../zlib/zconf.h
+mkpasswd.o: ../include/setup.h
 viconf.o: ../include/config.h ../include/setup.h
-viconf.o: ../zlib/zlib.h ../zlib/zconf.h
