--- a/adns/Makefile.in
+++ b/adns/Makefile.in
@@ -1,14 +1,14 @@
 #
 # Makefile.in for ircd/adns
 #
-# $Id: Makefile.in,v 1.2 2001/12/04 05:01:49 androsyn Exp $
+# $Id: Makefile.in,v 1.3 2001/12/07 04:13:21 jdc Exp $
 CC = @CC@
 RM = @RM@
 MKDEP = ${CC} -MM
 
-IRCDLIBS = @LIBS@ ../zlib/libz.a
+IRCDLIBS = @LIBS@
 
-INCLUDES = -I../include -I../zlib
+INCLUDES = -I../include
 CPPFLAGS = ${INCLUDES} @CPPFLAGS@
  
 # For developers
