--- a/autoconf/configure.in
+++ b/autoconf/configure.in
@@ -1,9 +1,9 @@
-dnl $Id: configure.in,v 1.20 2001/12/04 17:16:47 androsyn Exp $
+dnl $Id: configure.in,v 1.21 2001/12/07 04:13:24 jdc Exp $
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(include/class.h)
 
 AC_CONFIG_AUX_DIR(autoconf)
-AC_CONFIG_HEADER(include/setup.h zlib/setup.h)
+AC_CONFIG_HEADER(include/setup.h)
 
 PACKAGE=ircd-hybrid
 VERSION=6.0
@@ -32,6 +32,9 @@ AC_CHECK_HEADER(stdarg.h, , AC_MSG_ERROR(** stdarg.h could not be found - ircd-h
 
 dnl Checks for library functions.
 AC_PROG_GCC_TRADITIONAL
+
+dnl Check for zlib support (-lz).
+AC_CHECK_LIB(z, deflate)
 
 dnl check for poll() call
 AC_CHECK_FUNC(poll, AC_DEFINE(USE_POLL),)
@@ -177,5 +180,5 @@ case "$target" in
 *) AC_MSG_RESULT(nothing special required) ;;
 esac
 
-AC_OUTPUT(Makefile adns/Makefile src/Makefile tools/Makefile zlib/Makefile)
+AC_OUTPUT(Makefile adns/Makefile src/Makefile tools/Makefile)
 
