Solaris still needs -lnsl -lresolv.  Check for inet_ntoa and inet_aton instead of blindly linking them in.

--- a/autoconf/configure.in
+++ b/autoconf/configure.in
@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.21 2001/12/07 04:13:24 jdc Exp $
+dnl $Id: configure.in,v 1.22 2001/12/08 05:38:09 lusky Exp $
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(include/class.h)
 
@@ -22,6 +22,8 @@ AC_PROG_INSTALL
 dnl Checks for libraries.
 AC_CHECK_LIB(socket, socket)
 AC_CHECK_FUNC(crypt,, AC_CHECK_LIB(descrypt, crypt,,AC_CHECK_LIB(crypt, crypt,,)))
+AC_CHECK_FUNC(inet_ntoa,, AC_CHECK_LIB(nsl, inet_ntoa,,))
+AC_CHECK_FUNC(inet_aton,, AC_CHECK_LIB(resolv, inet_aton,,))
 
 dnl Checks for header files.
 AC_HEADER_STDC
