- fixed a ton of stdlib.h/string.h-needed compile warnings on RedHat7.1 - removed unneeded unistd.h and stdlib.h header checks from autoconf

--- a/autoconf/configure.in
+++ b/autoconf/configure.in
@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.22 2001/12/08 05:38:09 lusky Exp $
+dnl $Id: configure.in,v 1.23 2001/12/08 07:06:11 lusky Exp $
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(include/class.h)
 
@@ -6,7 +6,7 @@ AC_CONFIG_AUX_DIR(autoconf)
 AC_CONFIG_HEADER(include/setup.h)
 
 PACKAGE=ircd-hybrid
-VERSION=6.0
+VERSION=6.3
 AC_SUBST(PACKAGE)
 AC_SUBST(VERSION)
 
@@ -27,7 +27,7 @@ AC_CHECK_FUNC(inet_aton,, AC_CHECK_LIB(resolv, inet_aton,,))
 
 dnl Checks for header files.
 AC_HEADER_STDC
-AC_CHECK_HEADERS(sys/param.h unistd.h errno.h string.h stdlib.h stddef.h getopt.h crypt.h) 
+AC_CHECK_HEADERS(sys/param.h errno.h string.h stddef.h getopt.h crypt.h) 
 
 dnl Check for stdarg.h - if we can't find it, halt configure
 AC_CHECK_HEADER(stdarg.h, , AC_MSG_ERROR(** stdarg.h could not be found - ircd-hybrid will not compile without it **))
