- More zlib updates.  Now checks for version in configure, and leaves only include/library version comparison up to ircd.c.

--- a/autoconf/configure.in
+++ b/autoconf/configure.in
@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.23 2001/12/08 07:06:11 lusky Exp $
+dnl $Id: configure.in,v 1.24 2001/12/08 18:25:09 jdc Exp $
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(include/class.h)
 
@@ -35,8 +35,10 @@ AC_CHECK_HEADER(stdarg.h, , AC_MSG_ERROR(** stdarg.h could not be found - ircd-h
 dnl Checks for library functions.
 AC_PROG_GCC_TRADITIONAL
 
-dnl Check for zlib support (-lz).
+dnl Check for zlib support (-lz) by looking for deflate().  Then check
+dnl for zlib 1.0.2 or higher by looking for zlibVersion().
 AC_CHECK_LIB(z, deflate)
+AC_CHECK_LIB(z, zlibVersion, , AC_MSG_WARN(zlib 1.0.2 or higher required for ZIPLINK support))
 
 dnl check for poll() call
 AC_CHECK_FUNC(poll, AC_DEFINE(USE_POLL),)
