- Fix for duplicate -lz's during link-time.

--- a/autoconf/configure.in
+++ b/autoconf/configure.in
@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.24 2001/12/08 18:25:09 jdc Exp $
+dnl $Id: configure.in,v 1.25 2001/12/09 00:55:52 jdc Exp $
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(include/class.h)
 
@@ -38,7 +38,7 @@ AC_PROG_GCC_TRADITIONAL
 dnl Check for zlib support (-lz) by looking for deflate().  Then check
 dnl for zlib 1.0.2 or higher by looking for zlibVersion().
 AC_CHECK_LIB(z, deflate)
-AC_CHECK_LIB(z, zlibVersion, , AC_MSG_WARN(zlib 1.0.2 or higher required for ZIPLINK support))
+AC_CHECK_FUNC(zlibVersion, , AC_MSG_WARN(zlib 1.0.2 or higher required for ZIPLINK support))
 
 dnl check for poll() call
 AC_CHECK_FUNC(poll, AC_DEFINE(USE_POLL),)
