--- a/include/setup.h.in
+++ b/include/setup.h.in
@@ -1,4 +1,5 @@
 /* include/setup.h.in.  Generated automatically from configure.in by autoheader.  */
+/* $Id: setup.h.in,v 1.14 2001/12/09 17:37:23 lusky Exp $ */
 
 /* Define if you have a working `mmap' system call.  */
 #undef HAVE_MMAP
@@ -55,6 +56,9 @@
 
 /* Define if you have the <sys/param.h> header file.  */
 #undef HAVE_SYS_PARAM_H
+
+/* Define if you have the <sys/select.h> header file.  */
+#undef HAVE_SYS_SELECT_H
 
 /* Define if you have the <unistd.h> header file.  */
 #undef HAVE_UNISTD_H
