--- a/include/config.h.dist
+++ b/include/config.h.dist
@@ -16,7 +16,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- * $Id: config.h.dist,v 1.129 2001/12/09 19:02:09 lusky Exp $
+ * $Id: config.h.dist,v 1.130 2001/12/19 23:02:03 leeh Exp $
  */
 #ifndef INCLUDED_config_h
 #define INCLUDED_config_h
@@ -132,6 +132,12 @@
  */
 #define HIDE_SERVERS_IPS
 
+/* HIDE_SPOOF_IPS
+ * Define this to hide the ips of people spoofing from /trace etc, the +c
+ * notice and from /stats I
+ */
+#undef HIDE_SPOOF_IPS
+   
 /* HIDE_ERROR_MESSAGES
  * ERROR messages coming from servers can sometimes have IPs in them.
  * This will not show any error messages that are received, a
@@ -333,8 +339,9 @@
 
 /* SPOOF_NOTICE - See a notice when a user connects with a
  * spoofed I: line
- * err, this also will now not show spoofed i-lines to opers who
- * /stats i.
+ *
+ * This will no longer hide spoofed I: or the ips of spoofs, use
+ * HIDE_SPOOF_IPS
  */
 #define SPOOF_NOTICE
 
