--- a/doc/example.conf
+++ b/doc/example.conf
@@ -1,4 +1,4 @@
-#   $Id: example.conf,v 1.33 2001/11/29 07:22:03 wcampbel Exp $
+#   $Id: example.conf,v 1.34 2001/12/20 23:12:26 db Exp $
 #   IRC - Internet Relay Chat, doc/example.conf
 #   Copyright (C) 1992, Bill Wisner
 #
@@ -361,6 +361,12 @@ N:byron.u.washington.edu:gorfyhcnurc:byron.u.washington.edu:2:2
 #
 c:kaja.gi.alaska.edu:llamas:kaja.gi.alaska.edu::2
 N:kaja.gi.alaska.edu:llamas:kaja.gi.alaska.edu::2
+#
+# If you wish to bind to a specific IP for an outbound connect
+# There is an optional field after the class number you can use.
+#
+C:irc.ais.net:hi:irc.ais.net::2:192.168.0.1
+N:irc.ais.net:andy:irc.ais.net::2
 #
 # C and N lines may also use the "user@" combination in the same way as
 # the I-lines.
