- updated some docs. IP I lines have to have user@IP - RELNOTES notes this, and also asks for core etc. only if its cored

--- a/doc/example.conf
+++ b/doc/example.conf
@@ -1,4 +1,4 @@
-#   $Id: example.conf,v 1.34 2001/12/20 23:12:26 db Exp $
+#   $Id: example.conf,v 1.35 2001/12/30 07:50:33 db Exp $
 #   IRC - Internet Relay Chat, doc/example.conf
 #   Copyright (C) 1992, Bill Wisner
 #
@@ -117,17 +117,12 @@ I:root@acad.alask.edu::root@acad.alaska.edu::1
 ## If the IP block has a resolving host name, it will be shown instead
 ## of the IP address. This just serves to allow on an entire block of ip's
 ## without needing to specify each individual hostname.
-## Note, The old requirment was an 'x' in the name field.  Using 'x' now
-## will be converted to '*', allowing any username.
 
-## Allow any username from that IP block
-I:128.250.0.0/16::x::1
-
-## This does the same thing
-I:128.250.0.0/16::*::1
+## Allow any username from this IP block
+I:*@128.250.0.0/16::x::1
 
 ## Allow only user db from that IP block
-I:128.250.0.0/16::db::1
+I:db@128.250.0.0/16::x::1
 
 #
 # You can also limit the number of connections from one host
@@ -210,8 +205,8 @@ I:NOMATCH::*@*ts*::3
 ##    an IP can be used instead as long as the name field does not begin 
 ##    with an 'x'
 ##    i.e. 
-##    I:192.168.0.0/24::x::3 #this is an IP I line
-##    I:192.168.0.0::=db@*somesite.com::3 #this is a spoofed IP	
+##    I:db@192.168.0.0/24::x::3 #this is an IP I line
+##    I:db@192.168.0.0::=db@*somesite.com::3 #this is a spoofed IP	
 #
 # O: authorize operators. Fields are, in order, host name the operator must
 #    be logged in from (wildcards allowed), operator's password, operator's
@@ -364,6 +359,7 @@ N:kaja.gi.alaska.edu:llamas:kaja.gi.alaska.edu::2
 #
 # If you wish to bind to a specific IP for an outbound connect
 # There is an optional field after the class number you can use.
+# This binds the outgoing interface to 192.168.0.1
 #
 C:irc.ais.net:hi:irc.ais.net::2:192.168.0.1
 N:irc.ais.net:andy:irc.ais.net::2
