--- a/include/setup.h.in
+++ b/include/setup.h.in
@@ -1,5 +1,5 @@
 /* include/setup.h.in.  Generated automatically from configure.in by autoheader.  */
-/* $Id: setup.h.in,v 1.15 2001/12/09 19:02:09 lusky Exp $ */
+/* $Id: setup.h.in,v 1.16 2002/01/04 04:00:59 lusky Exp $ */
 
 /* Define if you have a working `mmap' system call.  */
 #undef HAVE_MMAP
@@ -36,6 +36,9 @@
 /* Define if you have the getpagesize function.  */
 #undef HAVE_GETPAGESIZE
 
+/* Define if you have the <crypt.h> header file.  */
+#undef HAVE_CRYPT_H
+
 /* Define if you have the <errno.h> header file.  */
 #undef HAVE_ERRNO_H
 
@@ -44,9 +47,6 @@
 
 /* Define if you have the <stddef.h> header file.  */
 #undef HAVE_STDDEF_H
-
-/* Define if you have the <stdlib.h> header file.  */
-#undef HAVE_STDLIB_H
 
 /* Define if you have the <string.h> header file.  */
 #undef HAVE_STRING_H
@@ -60,9 +60,6 @@
 /* Define if you have the <unistd.h> header file.  */
 #undef HAVE_UNISTD_H
 
-/* Define if you have the <crypt.h> header file.  */
-#undef HAVE_CRYPT_H
-
 /* Define if you have the descrypt library (-ldescrypt).  */
 #undef HAVE_LIBDESCRYPT
 
@@ -74,3 +71,6 @@
 
 /* Define if you have the socket library (-lsocket).  */
 #undef HAVE_LIBSOCKET
+
+/* Define if you have the z library (-lz).  */
+#undef HAVE_LIBZ
