--- a/autoconf/configure.in
+++ b/autoconf/configure.in
@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.27 2001/12/09 19:02:06 lusky Exp $
+dnl $Id: configure.in,v 1.28 2002/01/28 04:36:52 androsyn Exp $
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(include/class.h)
 
@@ -18,6 +18,7 @@ AC_PROG_MAKE_SET
 AC_PATH_PROG(RM,rm)
 AC_PATH_PROG(CP,cp)
 AC_PROG_INSTALL
+AC_C_INLINE
 
 dnl Checks for libraries.
 AC_CHECK_LIB(socket, socket)
