--- a/adns/Makefile.in
+++ b/adns/Makefile.in
@@ -1,10 +1,11 @@
 #
 # Makefile.in for ircd/adns
 #
-# $Id: Makefile.in,v 1.3 2001/12/07 04:13:21 jdc Exp $
+# $Id: Makefile.in,v 1.4 2002/07/12 00:04:02 androsyn Exp $
 CC = @CC@
 RM = @RM@
 MKDEP = ${CC} -MM
+RANLIB = @RANLIB@
 
 IRCDLIBS = @LIBS@
 
@@ -51,8 +52,8 @@ OBJS = ${SRCS:.c=.o}
 
 libadns.a: ${OBJS}
 	rm -f $@
-	${AR} csqv $@ ${OBJS}
-
+	${AR} cqv $@ ${OBJS}
+	${RANLIB} $@
 
 all: libadns.a
 build: all
