- applied all my patches   - allow | iline flag to give opers no_oper_flood before they /oper up   - umode +l -- #define ALLOW_UNIDLE, idle time faking (possibly for tcm?)   - umode +p -- #define ALLOW_OPERHIDE, hide in /stats p from users   - #define REMOTE_WHOIS_NOTICE - added eleet opers crap   - #define ELEET_OPERS is akin to bill's m_operspy in hybrid-7/contrib/   - controlled by oper flag and umode - added jupe bypass flag for opers - adding U:line flags to control sending/receiving of various slave things   - and appropriate docu. .. slave servers now don't suck (as much) - reworked some client.h stuff so as to be more extensible   - nothing really important here - always log() error messages (even though they could contain ips)   - send ERROR's to syslog/ircd.log if it's turned on, regardless if we're     hiding them from opers. - removed stuct User -> id.  it was a nice idea, but not for -6, diane
With some of these features, it would be nice to have branching.  If anyone
has a dire reason why these whould not be available in HEAD, please feel free
to back out my commit.

--- a/doc/example.conf
+++ b/doc/example.conf
@@ -1,4 +1,4 @@
-#   $Id: example.conf,v 1.35 2001/12/30 07:50:33 db Exp $
+#   $Id: example.conf,v 1.36 2003/01/05 19:47:43 gregp Exp $
 #   IRC - Internet Relay Chat, doc/example.conf
 #   Copyright (C) 1992, Bill Wisner
 #
@@ -189,6 +189,7 @@ I:NOMATCH::*@*ts*::3
 ##
 ## < This user is exempt from idle restrictions if IDLE_CHECK is defined
 ##
+## | This user has NO_OPER_FLOOD on connect
 
 ## Examples
 ## c) I:NOMATCH::^db@koruna.varner.com::3
@@ -227,6 +228,8 @@ I:NOMATCH::*@*ts*::3
 ##       disable an opers use of /rehash
 ## D/d - allow the use of /die or /restart. Default is d for disallowing
 ##       /die /restart 
+## J/j - (if enabled) let an oper join through local jupes
+## E/e - (if enabled) let an oper see throught +s
 ##
 ## Default flags for opers are GKORUH
 ## Default flags for local ops, KUH
@@ -445,6 +448,25 @@ U:irc2.somewhere.net
 
 # each client server would have
 U:irc_hub.somewhere.net
+
+## U: lines now support flags, specifying what to pass/accept
+## k/K don't/accept klines from this slave
+## s/S don't/send klines to this slave
+## l/L don't/accept locops
+## d/D don't/accept locops
+##
+## an example would be, on hub:
+## U:irc.example.com:::KsLD
+## on client:
+## U:ircd.example.conf:::kSLD
+## this would allow the hub to send klines downstream, but not up.
+##
+## by default, specifying a slave means all are on
+
+## S: set operstring on startup
+## with it being settable, specify a default as follows..
+S:is an IRC Operator:
+
 
 #
 #
