--- a/doc/example.conf
+++ b/doc/example.conf
@@ -1,4 +1,4 @@
-#   $Id: example.conf,v 1.36 2003/01/05 19:47:43 gregp Exp $
+#   $Id: example.conf,v 1.37 2003/05/04 17:52:35 db Exp $
 #   IRC - Internet Relay Chat, doc/example.conf
 #   Copyright (C) 1992, Bill Wisner
 #
@@ -189,7 +189,6 @@ I:NOMATCH::*@*ts*::3
 ##
 ## < This user is exempt from idle restrictions if IDLE_CHECK is defined
 ##
-## | This user has NO_OPER_FLOOD on connect
 
 ## Examples
 ## c) I:NOMATCH::^db@koruna.varner.com::3
@@ -228,8 +227,6 @@ I:NOMATCH::*@*ts*::3
 ##       disable an opers use of /rehash
 ## D/d - allow the use of /die or /restart. Default is d for disallowing
 ##       /die /restart 
-## J/j - (if enabled) let an oper join through local jupes
-## E/e - (if enabled) let an oper see throught +s
 ##
 ## Default flags for opers are GKORUH
 ## Default flags for local ops, KUH
@@ -448,25 +445,6 @@ U:irc2.somewhere.net
 
 # each client server would have
 U:irc_hub.somewhere.net
-
-## U: lines now support flags, specifying what to pass/accept
-## k/K don't/accept klines from this slave
-## s/S don't/send klines to this slave
-## l/L don't/accept locops
-## d/D don't/accept locops
-##
-## an example would be, on hub:
-## U:irc.example.com:::KsLD
-## on client:
-## U:ircd.example.conf:::kSLD
-## this would allow the hub to send klines downstream, but not up.
-##
-## by default, specifying a slave means all are on
-
-## S: set operstring on startup
-## with it being settable, specify a default as follows..
-S:is an IRC Operator:
-
 
 #
 #
