Added config variable OPER_JUPE_BYPASS to allow opers to bypass and join juped channels. This can be a useful tool in the war against drones.

--- a/include/config.h.dist
+++ b/include/config.h.dist
@@ -16,7 +16,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- * $Id: config.h.dist,v 1.133 2003/05/04 22:10:46 ievil Exp $
+ * $Id: config.h.dist,v 1.134 2003/06/06 09:06:37 ievil Exp $
  */
 #ifndef INCLUDED_config_h
 #define INCLUDED_config_h
@@ -757,6 +757,12 @@
  *  - Allows spoofs to be ip's instead just hostnames.     
  */     
 #undef SPOOF_IP  
+
+/* OPER_JUPE_BYPASS
+ * - in cases with drone channels one could want to join juped channels.
+ *   - ievil
+ */
+#undef OPER_JUPE_BYPASS
 
 /* -------------- END NOT APPROVED ON EFNET SECTION --------------------- */
 
