Added new oper flag P for stats p hide. This is meant for tcm/bopm style bots and not chicken opers. I will also follow this commit with a patch that doesnt make this hidding very stealth to the admin........
Submitted by:	ievil
Reviewed by:	einride
Obtained from:	ievil & einride

--- a/doc/example.conf
+++ b/doc/example.conf
@@ -1,4 +1,4 @@
-#   $Id: example.conf,v 1.37 2003/05/04 17:52:35 db Exp $
+#   $Id: example.conf,v 1.38 2003/06/10 01:12:00 ievil Exp $
 #   IRC - Internet Relay Chat, doc/example.conf
 #   Copyright (C) 1992, Bill Wisner
 #
@@ -227,6 +227,8 @@ I:NOMATCH::*@*ts*::3
 ##       disable an opers use of /rehash
 ## D/d - allow the use of /die or /restart. Default is d for disallowing
 ##       /die /restart 
+## P/p - allow/disallow hiding from stats p (recommended used for TCM
+##       only)
 ##
 ## Default flags for opers are GKORUH
 ## Default flags for local ops, KUH
