--- a/include/config.h.dist
+++ b/include/config.h.dist
@@ -16,7 +16,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- * $Id: config.h.dist,v 1.134 2003/06/06 09:06:37 ievil Exp $
+ * $Id: config.h.dist,v 1.135 2003/06/11 13:20:12 ievil Exp $
  */
 #ifndef INCLUDED_config_h
 #define INCLUDED_config_h
@@ -27,7 +27,7 @@
 
 /* PLEASE READ SECTION:
  *
- * I have commented out WHOIS_NOTICE and STATS_NOTICE
+ * I have commented out SHOW_REMOTE_WHOIS, WHOIS_NOTICE and STATS_NOTICE
  * Personally, I feel opers do not need to know the information
  * returned by having those two defines defined, it is an invasion
  * of privacy. The original need/use of showing STATS_NOTICE
@@ -35,7 +35,7 @@
  * can do much damage with stats flooding, so why show it?
  * whois notice is just an invasion of privacy. Who cares?
  * I personally hope you agree with me, and leave these undef'ed
- * but at least you have been warned.
+ * but at least you have been warned. - Dianora
  *
  */
 
@@ -367,6 +367,15 @@
  * you don't need this. -Dianora
  */
 #undef  WHOIS_NOTICE
+
+/* SHOW_REMOTE_WHOIS - Shows a notice to an oper when a client
+ * does a /whois on them, even when  the client is not on the
+ * same server as the oper (eg. a /whois nick nick ).
+ * Why do opers need this at all? Its an invasion of privacy. bah.
+ * you don't need this. -Dianora
+ */
+#undef SHOW_REMOTE_WHOIS
+
 
 /* WHOIS_WAIT - minimum seconds between remote use of WHOIS before
  * max use count is reset
