--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -1,7 +1,7 @@
 #
 # Makefile.in for ircd/src
 #
-# $Id: Makefile.in,v 1.71 2003/06/06 09:30:15 ievil Exp $
+# $Id: Makefile.in,v 1.72 2003/06/12 23:05:56 ievil Exp $
 CC = @CC@
 RM = @RM@
 MKDEP = ${CC} -MM
@@ -38,6 +38,7 @@ SRCS = \
 	m_close.c \
 	m_connect.c \
 	m_die.c \
+	m_encap.c \
 	m_error.c \
 	m_gline.c \
 	m_htm.c \
