Must god help us all. For here is OperSpy....

--- a/include/config.h.dist
+++ b/include/config.h.dist
@@ -16,7 +16,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- * $Id: config.h.dist,v 1.137 2003/06/12 23:53:03 ievil Exp $
+ * $Id: config.h.dist,v 1.138 2003/06/14 23:23:39 ievil Exp $
  */
 #ifndef INCLUDED_config_h
 #define INCLUDED_config_h
@@ -210,6 +210,11 @@
  */
 #define FNAME_USERLOG "/usr/local/ircd/users"
 #define FNAME_OPERLOG "/usr/local/ircd/opers"
+
+/* FNAME_OPERSPYLOG and FNAME_OPERSPYRLOG - logs of OPERSPY usage!
+ */
+#define FNAME_OPERSPYLOG   "/usr/local/ircd/operspy.local.log"
+#define FNAME_OPERSPYRLOG  "/usr/local/ircd/operspy.remote.log"
 
 /* RFC1035_ANAL
  * Defining this causes ircd to reject hostnames with non-compliant chars.
@@ -697,6 +702,22 @@
  */
 #undef  NO_PRIORITY
 
+/* OPERSPY
+ * This was voted in as an EFnet feature. Gives opers with the correct
+ * conf flag (S) access to use OPERSPY features that allows them to
+ * see :
+ * - See all +i clients in /who
+ * - See all clients on +s/+p chans
+ * - See all +s/+ channels in /whois
+ * - See channel keys/modes
+ */
+#undef OPERSPY
+
+/* OPERSPYLOG *mandatory on efnet*
+ * Logs OPERSPY usage.
+ */
+#define OPERSPYLOG
+
 /* ----------------- not approved on EFnet section --------------------
  *
  * if you are not an efnet admin - we recommend you enable most of these.. 
@@ -793,6 +814,21 @@
  */
 #undef RESTRICT_LOCOP
 
+/* OPERSPY
+ * This was voted in as an EFnet feature. Gives opers with the correct
+ * conf flag (S) access to use OPERSPY features that allows them to
+ * see :
+ * - See all +i clients in /who
+ * - See all clients on +s/+p chans
+ * - See all +s/+ channels in /whois
+ * - See channel keys/modes
+ */
+#undef OPERSPY
+
+/* OPERSPYLOG *mandatory on efnet*
+ * Logs OPERSPY usage.
+ */
+#define OPERSPYLOG
 
 /* -------------- END NOT APPROVED ON EFNET SECTION --------------------- */
 
@@ -1038,6 +1074,10 @@
 #error ZIP_LINKS defined put ZLIB not found.  Undef ZIP_LINKS or install ZLIB
 #endif
 
+#if defined(OPERSPY) && !defined(OPERSPYLOG)
+#define OPERSPYLOG
+#endif
+
 #ifdef DEBUGMODE
 #  define Debug(x) debug x
 #  define LOGFILE LPATH
@@ -1067,6 +1107,12 @@
 
 #ifdef IDLE_CHECK
 #define MIN_IDLETIME 1800
+#endif
+
+#ifdef OPERSPY
+#define WHO_PREFIX       '!'
+#define WHOIS_PREFIX     '!'
+#define MODE_PREFIX      '!'
 #endif
 
 #define CONFIG_H_LEVEL_6_3
